# dfa-dynamics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/glad/: glad.h
src/: main.cpp  stb_image.cpp  triangle_mesh.cpp  triangle_mesh.hpp
src/shaders/: fragment.glsl  vertex.glsl
src/v1/: triangle_mesh.hpp
src/v1-triangles/: shader.cpp
src/v2-textures/: glad.c  material.cpp  material.hpp  shader.hpp  triangle_mesh.cpp
